// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package xfa.icon.actions.proto;

message TareForceTorqueSensorParams {
  // The number of real-time control cycles over which the force torque sensor
  // offset is averaged. Defaults to 1.
  optional uint32 num_taring_cycles = 1;
}
